--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-aria/dnd": "^3.0.0-rc.0",
+    "@react-types/shared": "^3.15.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
